# cmake-project-template

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  build_script.ps1
.github/workflows/: build.yml  cache-deps.yml
cmake/: CodeCoverage.cmake  dependencies.cmake  docs.cmake
config/: CMakeLists.txt  config.hpp.in
docs/: Doxyfile
inc/classes/: MyClass.h
inc/functions/: Functions.h
inc/lib/: Lib.h
inc/util/: Testing.h
scripts/: README.md  setup-env.py
src/: CMakeLists.txt  CMakeSourceLists.txt  main.cpp
src/classes/: MyClass.cpp
src/functions/: Functions.cpp
src/lib/: Lib.cpp
test/: CMakeLists.txt  test.cpp
test/classes/: MyClassTest.cpp
test/functions/: FuncTest.cpp
